--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "mongoose-delete": "^0.5.2",
+    "mongoose-transactions-typescript": "^1.1.4",
     "ts-node-dev": "^1.0.0-pre.49"
   },
   "devDependencies": {
