--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
     "test": "jest --watchAll --no-cache",
-    "start:prod": "nodemon dist/index.js"
+    "start:prod": "forever start dist/index.js",
+    "stop:prod": "forever stop dist/index.js"
   },
   "jest": {
     "preset": "ts-jest",
@@ -29,10 +30,10 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.6.0",
+    "forever": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "mongoose-delete": "^0.5.2",
-    "nodemon": "^2.0.4",
     "ts-node-dev": "^1.0.0-pre.49"
   },
   "devDependencies": {
