--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.27",
     "@types/mongoose-delete": "^0.5.1",
+    "@types/mongoose-paginate-v2": "^1.3.7",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "mongoose-delete": "^0.5.2",
+    "mongoose-paginate-v2": "^1.3.9",
     "ts-node-dev": "^1.0.0-pre.49"
   },
   "devDependencies": {
