--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cookie-session": "2.0.39",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.7.27",
     "@types/mongoose-delete": "^0.5.1",
     "@types/mongoose-paginate-v2": "^1.3.7",
@@ -33,6 +34,7 @@
     "express-validator": "^6.6.0",
     "forever": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.20",
     "mongoose-delete": "^0.5.2",
     "mongoose-paginate-v2": "^1.3.9",
