--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "mongoose": "^5.9.20",
     "mongoose-delete": "^0.5.2",
     "mongoose-paginate-v2": "^1.3.9",
+    "multer": "^1.4.2",
     "ts-node-dev": "^1.0.0-pre.49"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/jest": "^26.0.0",
+    "@types/multer": "^1.4.3",
     "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
