--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "handlebars": "^4.7.6",
     "html-pdf": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "mongoose": "^5.9.20",
     "mongoose-aggregate-paginate-v2": "^1.0.42",
@@ -48,6 +49,7 @@
     "@types/handlebars": "^4.1.0",
     "@types/html-pdf": "^2.2.0",
     "@types/jest": "^26.0.0",
+    "@types/lodash": "^4.14.159",
     "@types/multer": "^1.4.3",
     "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
