--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/mongoose": "^5.7.27",
     "@types/mongoose-delete": "^0.5.1",
     "@types/mongoose-paginate-v2": "^1.3.7",
+    "angka-menjadi-terbilang": "^0.5.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
